--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AwesomeProject",
-    "slug": "AwesomeProject",
+    "name": "my-app",
+    "slug": "my-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,9 +15,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "sdkVersion": "49.0.0"
-
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
