--- a/package.json
+++ b/package.json
@@ -1,43 +1,29 @@
 {
-  "name": "appdoctor",
+  "name": "my-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.4",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.16",
-    "axios": "^1.6.0",
-    "date-fns": "^2.28.0",
-    "expo": "^49.0.0",
-    "expo-location": "~16.1.0",
+    "@react-navigation/native-stack": "^6.9.17",
+    "date-fns": "^2.30.0",
+    "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^8.10.1",
-    "radio-buttons-react-native": "^1.0.4",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-drop-shadow": "^0.0.4",
-    "react-native-elements": "^3.4.2",
-    "react-native-maps": "1.7.1",
-    "react-native-pager-view": "6.2.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "~0.19.6",
-    "react-navigation-stack": "^2.10.4",
-    "typescript": "^5.1.3"
+    "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
