--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-image-picker": "^7.0.2",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-dropdown": "^1.0.2",
+    "react-native-modal-selector": "^2.1.2",
+    "react-native-picker-select": "^9.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
